[package]
name = "cl3"
version = "0.2.1"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A Rust implementation of the Khronos OpenCL 3.0 API."
documentation = "https://docs.rs/cl3/"
homepage = "https://github.com/kenba/cl3"
repository = "https://github.com/kenba/cl3"
readme = "README.md"
keywords = ["opencl", "gpu", "gpgpu"]
categories = ["api-bindings", "asynchronous"]
license = "Apache-2.0"
edition = "2018"

[features]

CL_VERSION_1_2 = []
CL_VERSION_2_0 = []
CL_VERSION_2_1 = []
CL_VERSION_2_2 = []
CL_VERSION_3_0 = []

# Default features:
default = ["CL_VERSION_1_2", "CL_VERSION_2_0"]

[dependencies]
libc = "0.2"

[dependencies.cl-sys]
version = "0.4.2"
features = ["opencl_version_2_0", "opencl_version_2_1", "opencl_version_2_2"]
