[package]
name = "cl3"
version = "0.3.1"
authors = ["Ken Barker <ken.barker@via-technology.aero>"]
description = "A Rust implementation of the Khronos OpenCL 3.0 API and extensions."
documentation = "https://docs.rs/cl3/"
homepage = "https://github.com/kenba/cl3"
repository = "https://github.com/kenba/cl3"
readme = "README.md"
keywords = ["opencl", "gpu", "gpgpu", "ffi", "api"]
categories = ["api-bindings", "asynchronous", "external-ffi-bindings"]
license = "Apache-2.0"
edition = "2018"

[features]

CL_VERSION_1_2 = []
CL_VERSION_2_0 = []
CL_VERSION_2_1 = []
CL_VERSION_2_2 = []
CL_VERSION_3_0 = []

cl_apple_setmemobjectdestructor = []
cl_khr_icd = []
cl_khr_il_program = []
cl_khr_terminate_context = []
cl_khr_create_command_queue = []
cl_ext_device_fission = []
cl_ext_migrate_memobject = []
cl_qcom_ext_host_ptr = []
cl_img_use_gralloc_ptr = []
cl_img_generate_mipmap = []
cl_khr_subgroups = []
cl_khr_suggested_local_work_size = []
cl_arm_import_memory = []
cl_arm_shared_virtual_memory = []
cl_intel_accelerator = []
cl_intel_unified_shared_memory = []
cl_intel_create_buffer_with_properties = []

cl_khr_gl_sharing = []
cl_khr_gl_event = []
cl_khr_egl_image = []
cl_khr_egl_event = []

cl_khr_dx9_media_sharing = []
cl_intel_dx9_media_sharing = []
cl_khr_d3d10_sharing = []
cl_khr_d3d11_sharing = []

# Default features:
default = ["CL_VERSION_1_2", "CL_VERSION_2_0"]

[dependencies]
libc = "0.2"

[dependencies.cl-sys]
version = "0.4.2"
features = ["opencl_version_2_0", "opencl_version_2_1", "opencl_version_2_2"]
